# suspiciousness

./: README.md  pyproject.toml
suspiciousness/: __init__.py  core.py  plot.py  utils.py
